--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,117 +5,80 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.81MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇷🇺 俄罗斯联邦-1.49MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇦🇺 澳大利亚-1.79MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林), server: 213.183.53.177, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
-  - {name: 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林), server: 213.183.53.177, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 🇨🇳 台湾-1.76MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇭🇰 香港-622.7KB/s(Youtube:不良林), server: 426hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 426hk.fans8.xyz}}
-  - {name: 🇨🇳 中国-6.17MB/s(Youtube:不良林), server: zh01lv5hk02.feiguayun.xyz, port: 11087, type: ss, cipher: aes-256-gcm, password: 21d2158a-45a3-4c76-afc5-8a69cfcbf272}
-  - {name: 乌克兰-631.8KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 🇭🇰 香港-2.05MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
+  - {name: 🇯🇵 日本-8.02MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-670.0KB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
+  - {name: 🇭🇰 香港-531.7KB/s(Youtube:不良林), server: 426hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 426hk.fans8.xyz}}
+  - {name: 🇨🇳 中国-499.3KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.76MB/s(Youtube:不良林)
-      - 🇭🇰 香港-622.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
-      - 乌克兰-631.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-670.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-531.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.76MB/s(Youtube:不良林)
-      - 🇭🇰 香港-622.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
-      - 乌克兰-631.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-670.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-531.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.76MB/s(Youtube:不良林)
-      - 🇭🇰 香港-622.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
-      - 乌克兰-631.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-670.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-531.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.76MB/s(Youtube:不良林)
-      - 🇭🇰 香港-622.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-531.7KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.76MB/s(Youtube:不良林)
-      - 🇭🇰 香港-622.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
-      - 乌克兰-631.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-670.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-531.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.76MB/s(Youtube:不良林)
-      - 🇭🇰 香港-622.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
-      - 乌克兰-631.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-670.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-531.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.76MB/s(Youtube:不良林)
-      - 🇭🇰 香港-622.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
-      - 乌克兰-631.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-670.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-531.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -131,16 +94,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.76MB/s(Youtube:不良林)
-      - 🇭🇰 香港-622.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
-      - 乌克兰-631.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-670.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-531.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
