--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,80 +5,80 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-8.02MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-670.0KB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
-  - {name: 🇭🇰 香港-531.7KB/s(Youtube:不良林), server: 426hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 426hk.fans8.xyz}}
-  - {name: 🇨🇳 中国-499.3KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇨🇳 中国-2.31MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-400.1KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇭🇰 香港-1.44MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-8.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-670.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-531.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-400.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.44MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-8.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-670.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-531.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-400.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.44MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-8.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-670.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-531.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-400.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.44MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-531.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.44MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-8.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-670.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-531.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-400.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.44MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-8.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-670.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-531.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-400.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.44MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-8.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-670.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-531.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-400.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.44MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,11 +94,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-8.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-670.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-531.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-400.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.44MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
