--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,81 +5,79 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-1.67MB/s(Youtube:不良林), server: 426hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 426hk.fans8.xyz}}
   - {name: 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1.44MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
   - {name: 🇫🇷 法国-1.43MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇨🇳 中国-347.1KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
+  - {name: 乌克兰-539.6KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
+  - {name: 🇯🇵 日本-4.05MB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-1.67MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.44MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-347.1KB/s(Youtube:不良林)
+      - 乌克兰-539.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.05MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-1.67MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.44MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-347.1KB/s(Youtube:不良林)
+      - 乌克兰-539.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.05MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-1.67MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.44MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-347.1KB/s(Youtube:不良林)
+      - 乌克兰-539.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.05MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.67MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.44MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-1.67MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.44MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-347.1KB/s(Youtube:不良林)
+      - 乌克兰-539.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.05MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-1.67MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.44MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-347.1KB/s(Youtube:不良林)
+      - 乌克兰-539.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.05MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-1.67MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.44MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-347.1KB/s(Youtube:不良林)
+      - 乌克兰-539.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.05MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -95,11 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-1.67MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.44MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-347.1KB/s(Youtube:不良林)
+      - 乌克兰-539.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.05MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
